Chore : Edited Register/Login Behaviours ,, And Added basic functionalies for orders

--- a/OrdersManagement.Infrastructure/OrdersManagement.Infrastructure.csproj
+++ b/OrdersManagement.Infrastructure/OrdersManagement.Infrastructure.csproj
@@ -18,4 +18,8 @@
 		<ProjectReference Include="..\OrdersManagement.Application\OrdersManagement.Application.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
+	</ItemGroup>
+
 </Project>
