--- a/OrdersManagement.Presentaion/appsettings.Development.json
+++ b/OrdersManagement.Presentaion/appsettings.Development.json
@@ -8,6 +8,27 @@
   "ConnectionStrings": {
     "Default": "Server=.;Database=OrderMangmentSystemDb;Trusted_Connection=True;Trust Server Certificate=True;MultipleActiveResultSets=True"
   },
+  "JWTSettings": {
+    "SecretKey": "YourSuperSecretKeyHere12345678901234567890",
+    "ValidAudiences": [
+      //angular
+      "http://localhost:4200",
+      //react
+      "http://localhost:3000"
+    ],
+    "ValidIssuers": [
+      //https
+      "https://localhost:7129",
+
+      //http
+      "http://localhost:5119"
+
+      // iis
+      // "http://localhost:10430"
+
+    ],
+    "ExpirationInDays": 7
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
