--- a/OrdersManagement.Application/OrdersManagement.Application.csproj
+++ b/OrdersManagement.Application/OrdersManagement.Application.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.4.0" />
   </ItemGroup>
 
   <ItemGroup>
